--- a/Pentol.html
+++ b/Pentol.html
@@ -1135,7 +1135,7 @@ body::before {
         const checkoutButton = document.getElementById('checkoutButton');
         const suggestions = document.getElementById('suggestions');
 
-        const BACKEND_URL = 'YOUR_RAILWAY_APP_URL'; // Ganti dengan URL aplikasi Railway Anda
+        const BACKEND_URL ='https://replit.com/@jamilsiu3/kasir-backend-api?s=app'; // Ganti dengan URL aplikasi Railway Anda
 
         function formatRupiah(number) {
             return new Intl.NumberFormat('id-ID', { style: 'currency', currency: 'IDR', minimumFractionDigits: 0 }).format(number);
