--- a/riwayat.html
+++ b/riwayat.html
@@ -167,7 +167,7 @@
             const emptyHistoryMessage = document.getElementById('empty-history-message');
             const clearHistoryButton = document.getElementById('clearHistoryButton');
 
-            const BACKEND_URL = 'YOUR_RAILWAY_APP_URL'; // Ganti dengan URL aplikasi Railway Anda
+            const BACKEND_URL ='https://replit.com/@jamilsiu3/kasir-backend-api?s=app'; // Ganti dengan URL aplikasi Railway Anda
 
             function formatRupiah(number) {
                 return new Intl.NumberFormat('id-ID', { style: 'currency', currency: 'IDR', minimumFractionDigits: 0 }).format(number);
