--- a/Pentol.html
+++ b/Pentol.html
@@ -1135,7 +1135,7 @@ body::before {
         const checkoutButton = document.getElementById('checkoutButton');
         const suggestions = document.getElementById('suggestions');
 
-        const BACKEND_URL ='https://replit.com/@jamilsiu3/kasir-backend-api?s=app'; // Ganti dengan URL aplikasi Railway Anda
+        const BACKEND_URL ='https://0425bac7-4ac7-499e-bcc5-f0c1db993f8e-00-hj0oi89qj0g.pike.replit.dev'; // Ganti dengan URL aplikasi Railway Anda
 
         function formatRupiah(number) {
             return new Intl.NumberFormat('id-ID', { style: 'currency', currency: 'IDR', minimumFractionDigits: 0 }).format(number);
