--- a/riwayat.html
+++ b/riwayat.html
@@ -167,7 +167,7 @@
             const emptyHistoryMessage = document.getElementById('empty-history-message');
             const clearHistoryButton = document.getElementById('clearHistoryButton');
 
-            const BACKEND_URL ='https://replit.com/@jamilsiu3/kasir-backend-api?s=app'; // Ganti dengan URL aplikasi Railway Anda
+            const BACKEND_URL ='https://0425bac7-4ac7-499e-bcc5-f0c1db993f8e-00-hj0oi89qj0g.pike.replit.dev/'; // Ganti dengan URL aplikasi Railway Anda
 
             function formatRupiah(number) {
                 return new Intl.NumberFormat('id-ID', { style: 'currency', currency: 'IDR', minimumFractionDigits: 0 }).format(number);
